# search-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
src/search_agent/: cache.py  config.py  deps.py  fetch.py  main.py  mcp_server.py  models.py  pipeline.py  searxng.py
src/search_agent/agents/: analyze_synthesizer.py  analyzer.py  query_planner.py  synthesizer.py
src/search_agent/providers/: __init__.py  base.py  searxng.py  staan.py
tests/: conftest.py  test_cache.py  test_fetch.py  test_health.py  test_mcp_server.py  test_pipeline.py  test_providers.py  test_searxng.py  test_staan.py
