[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search-agent"
version = "0.1.0"
description = "Search agent — web search pipeline powered by Pydantic AI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-ai>=0.1",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "mcp[cli]>=1.0",
    "trafilatura>=1.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/search_agent"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
