[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search-agent"
version = "0.1.0"
description = "Search agent — web search pipeline powered by Pydantic AI"
requires-python = ">=3.12"
dependencies = [
    # fastapi 0.136.3 added an undocumented typosquat-shaped dependency
    # `fastar>=0.9.0` to the [standard] extra (advisory MAL-2026-4750). We
    # don't install fastapi[standard], but the version itself is flagged —
    # exclude it explicitly so a future `uv lock --upgrade` can't grab it.
    "fastapi>=0.115,!=0.136.3",
    "uvicorn[standard]>=0.34",
    # Tightened lower bounds: pre-1.0 pydantic-ai and early mcp releases had
    # breaking API changes; trafilatura 1.x and redis 5.x are several majors
    # behind the resolved lockfile versions.
    "pydantic-ai>=1.0",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "mcp[cli]>=1.20",
    "trafilatura>=2.0",
    "redis>=7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "fakeredis>=2.20",
    "pip-audit>=2.7",
    "bandit>=1.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/search_agent"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
